[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/heart-ui.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/coin-ui.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/key-gold.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/pause-button.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Doubledecker DEMO.otf"

[sub_resource type="DynamicFont" id=4]
size = 48
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="contador_vidas" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 70, 50 )

[node name="Sprite" type="Sprite" parent="contador_vidas"]
scale = Vector2( 0.24, 0.21 )
texture = ExtResource( 2 )

[node name="txtVidasFundo" type="Label" parent="contador_vidas"]
margin_left = 31.0
margin_top = -26.0
margin_right = 133.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "x0
"

[node name="txtVidas" type="Label" parent="contador_vidas"]
margin_left = 27.0
margin_top = -28.0
margin_right = 181.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 4 )
text = "x0
"

[node name="contador_moedas" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 70, 100 )

[node name="Sprite" type="Sprite" parent="contador_moedas"]
scale = Vector2( 0.24, 0.21 )
texture = ExtResource( 3 )

[node name="txtMoedasFundo" type="Label" parent="contador_moedas"]
margin_left = 31.0
margin_top = -26.0
margin_right = 154.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "x0
"

[node name="txtMoedas" type="Label" parent="contador_moedas"]
margin_left = 27.0
margin_top = -28.0
margin_right = 97.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 4 )
text = "x0"

[node name="contador_chaves_ouro" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 924.299, 50 )

[node name="Sprite" type="Sprite" parent="contador_chaves_ouro"]
scale = Vector2( 0.24, 0.21 )
texture = ExtResource( 4 )

[node name="txtChavesFundo" type="Label" parent="contador_chaves_ouro"]
margin_left = 30.6479
margin_top = -25.8471
margin_right = 81.6479
margin_bottom = 91.1529
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "x0
"

[node name="txtChaves" type="Label" parent="contador_chaves_ouro"]
margin_left = 27.1394
margin_top = -28.4318
margin_right = 78.1394
margin_bottom = 88.5682
custom_fonts/font = SubResource( 4 )
text = "x0
"

[node name="btnPause" type="Button" parent="."]
editor/display_folded = true
margin_left = 506.119
margin_top = 10.8924
margin_right = 564.119
margin_bottom = 66.8924
flat = true

[node name="Sprite" type="Sprite" parent="btnPause"]
position = Vector2( 29.1327, 29.2927 )
scale = Vector2( 0.287261, 0.277038 )
texture = ExtResource( 5 )
